WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219535
[JIT] Value profile stores wrong value in BaselineJIT for some operations
https://bugs.webkit.org/show_bug.cgi?id=219535
Summary
[JIT] Value profile stores wrong value in BaselineJIT for some operations
Caio Lima
Reported
2020-12-04 03:24:16 PST
This got fixed by
https://bugs.webkit.org/show_bug.cgi?id=219501
on 64-bits
Attachments
Patch
(4.03 KB, patch)
2020-12-04 05:53 PST
,
Caio Lima
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Caio Lima
Comment 1
2020-12-04 05:53:15 PST
Created
attachment 415410
[details]
Patch
Mark Lam
Comment 2
2020-12-04 06:01:27 PST
Comment on
attachment 415410
[details]
Patch r=me
Caio Lima
Comment 3
2020-12-04 07:51:56 PST
Comment on
attachment 415410
[details]
Patch Thank you for the review!
EWS
Comment 4
2020-12-04 07:55:09 PST
Committed
r270431
: <
https://trac.webkit.org/changeset/270431
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415410
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-12-04 07:56:17 PST
<
rdar://problem/71979049
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug