[JIT] Value profile stores wrong value in BaselineJIT for some operations https://bugs.webkit.org/show_bug.cgi?id=219535

Reviewed by Mark Lam.

This patch is a follow up from r270423 to fix 32-bits baseline JIT
code from `op_iterator_next`. It's also fixing wrong profile value for
`op_get_prototype_of`.

* jit/JITCall32_64.cpp:
(JSC::JIT::emit_op_iterator_next):
* jit/JITOpcodes.cpp:
(JSC::JIT::emit_op_get_prototype_of):


Canonical link: https://commits.webkit.org/232114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270431 268f45cc-cd09-0410-ab3c-d52691b4dbfc